@@ -1,3 +1,8 @@
+2004-12-01  John Luke  <john.luke@gmail.com>
+
+	* Gui/Pads/FileScout.cs: use ShadowType.In so the
+	FileBrowser doesn't look funny when it is the only pad
+
 2004-11-16  Todd Berman  <tberman@off.net>
 
 	* Internal/Project/Project/AbstractProject.cs: Make sure that
